# FVM

./: .gitignore  README.MD
1d_convection_diffusion/: 1d_cd.cpp  1d_cd.h  CMakeLists.txt  case1_params.json  case2_params.json  case3_params.json  case4_params.json  main.cpp  parameters.json  results_analysis.md  visualize_results.py
2d_convection_diffusion/: 2d_cd.cpp  2d_cd.h  CMakeLists.txt  main.cpp  parameters.json
2d_possion/: 2d_possion.cpp  2d_possion.h  CMakeLists.txt  README_visualization.md  main.cpp  parameter.json  visualize_gauss_seidel.py
convection_diffusion/: convection_diffusion_center.plot  convection_diffusion_x.plot  job_Pe_L.bat  job_Pe_L_center.bat
convection_diffusion/include/: postprocess.h  solver_settings.h  structure_mesh.h
convection_diffusion/src/: assemblesystem.cpp  boundarysettings.cpp  main.cpp  postprocess.cpp  solver.cpp  solver_settings.cpp  structure_mesh.cpp
heat_conduction/: CMakeLists.txt  README.MD  conduction_plate.plot  parameter.json
heat_conduction/include/: assemblesystem.h  boundarysettings.h  getparameter.h  kernel.h  material_settings.h  postprocess.h  solver.h  solver_settings.h  structure_mesh.h
heat_conduction/src/: assemblesystem.cpp  demo.cpp  (+7 more)
simple/: CMakeLists.txt
simple/include/: assemblesystem.h  boundarysettings.h  kernel.h  linearsolver.h  material_settings.h  postprocess.h  solver.h  solver_settings.h  structure_mesh.h
simple/src/: assemblesystem.cpp  boundarysettings.cpp  demo.cpp  kernel.cpp  linearsolver.cpp  main.cpp  postprocess.cpp  solver.cpp  solver_settings.cpp  structure_mesh.cpp
